# Planar-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  readme.md
Asset/: CMakeLists.txt
Asset/Editor/: CMakeLists.txt  DefaultLayout.planarlayout  PackPlanarEngine.cmake  Project.planar
Asset/Editor/Archive/: CMakeLists.txt
Asset/Editor/Fonts/: CMakeLists.txt
Asset/Editor/Icons/: CMakeLists.txt
Asset/Editor/Layout/: CMakeLists.txt  DefaultLayout.planarlayout
Asset/Editor/Project/: CMakeLists.txt  Ignore.planarignore  Project.planar  Scene.planarscene
Asset/Editor/Script/: BaseProject.planarcsproj  CMakeLists.txt  ComponentScript.planarcs  GeneratedEntry.planarcs  PackPlanarScript.cmake
Asset/Editor/Textures/: CMakeLists.txt
Asset/Engine/: BasicPrelude.planarprelude  CMakeLists.txt  Project.planar
Asset/Engine/Graphics/Shader/: BasicFrag.glsl  BasicVert.glsl  CMakeLists.txt  SpriteFrag.glsl  SpriteVert.glsl
Include/Planar/Engine/Component/: AudioSource.hpp  CMakeLists.txt  Camera2D.hpp  Camera2DAsset.hpp  CameraController2D.hpp  CharacterController2D.hpp  Component.hpp  Component.tpp  ComponentBase.hpp  ComponentFunction.hpp  ComponentFunction.tpp  ComponentMacros.hpp  ComponentType.hpp  Script.hpp  SpriteRenderer.hpp  Transform2D.hpp  Transform2DAsset.hpp
Include/Planar/Engine/Component/Core/: AllComponent.hpp  CMakeLists.txt  Component.hpp  Component.tpp  ComponentBase.hpp  ComponentBase.tpp  ComponentFunction.hpp  ComponentFunction.tpp  ComponentMacros.hpp  ComponentType.hpp
Include/Planar/Engine/Component/Mixin/: Active.hpp  Active.tpp  CMakeLists.txt
Include/Planar/Engine/Core/: Application.hpp  ApplicationAsset.hpp  CMakeLists.txt  Component.hpp  ExportMacros.hpp  GLFWContext.hpp  GameObject.hpp  ImGuiContext.hpp  Links.hpp  Version.hpp
Include/Planar/Engine/Core/Archive/: Archive.hpp  CMakeLists.txt
Include/Planar/Engine/Core/Constants/: CMakeLists.txt  Links.hpp  Version.hpp
Include/Planar/Engine/Core/Execute/: CMakeLists.txt  Execute.hpp
Include/Planar/Engine/Core/FileSystem/: CMakeLists.txt  FileSystem.hpp  FileSystem.tpp  ListingSortType.hpp  SelectDialogFilter.hpp  SelectDialogResult.hpp
Include/Planar/Engine/Core/GLFW/: CMakeLists.txt  GLFW.hpp  GLFW.tpp  GLFWContext.hpp
Include/Planar/Engine/Core/GUID/: CMakeLists.txt  GUID.hpp  Representation.hpp
Include/Planar/Engine/Core/Input/: CMakeLists.txt  InputController.hpp  KeyState.hpp
Include/Planar/Engine/Core/Log/: CMakeLists.txt  Logger.hpp  LoggerBase.hpp  TerminalLogger.hpp
Include/Planar/Engine/Core/Mixin/: CMakeLists.txt  Mixin.hpp  Mixin.tpp
Include/Planar/Engine/Core/Shell/: CMakeLists.txt  Shell.hpp
Include/Planar/Engine/Core/Sprite/: CMakeLists.txt  Sprite.hpp  SpriteAsset.hpp
Include/Planar/Engine/Core/Utils/: Arithmetic.hpp  CMakeLists.txt  EnumClassBase.hpp  EnumClassBase.tpp  EnumClassFlags.hpp  EnumClassFlags.tpp  IsEnumClass.hpp  Logger.hpp
Include/Planar/Engine/UI/ImGui/: CMakeLists.txt  ImGui.hpp  ImGuiContext.hpp  ImGuiElement.hpp  ImGuiGroup.hpp  ImGuiInputField.hpp  ImGuiMainMenuBar.hpp  ImGuiStyleColor.hpp  ImGuiTextRenderer.hpp  ImGuiWindow.hpp  ImGuiWindowFlags.hpp
Script/: CMakeLists.txt  Main.cs
Script/Planar/: CMakeLists.txt
Script/Planar/Engine/: CMakeLists.txt
Script/Planar/Engine/Asset/: AssetDatabase.cs  CMakeLists.txt
Script/Planar/Engine/Component/Core/: CMakeLists.txt  Component.cs
Script/Planar/Engine/Core/: Application.cs  ApplicationAsset.cs  CMakeLists.txt  Entry.cs  ImportConstants.cs
Script/Planar/Engine/Core/Log/: CMakeLists.txt  ILogger.cs  Logger.cs  TerminalLogger.cs
Script/Planar/Engine/Core/Native/: CMakeLists.txt  NativeFunction.cs
Script/Planar/Engine/Core/Utils/: AssemblyUtils.cs  CMakeLists.txt  ResourceUtils.cs
Script/Planar/Engine/Graphics/: CMakeLists.txt  SupportedGraphicsAPI.cs
Script/Planar/Engine/Math/: CMakeLists.txt  Size2D.cs
Script/Planar/Engine/Scene/: CMakeLists.txt  Scene.cs
Script/Planar/Script/Core/: CMakeLists.txt  Entry.cs
Source/Planar/Editor/: CMakeLists.txt  Main.cpp
Source/Planar/Editor/Asset/: CMakeLists.txt  ProjectAsset.cpp
Source/Planar/Editor/Core/: CMakeLists.txt  Editor.cpp
Source/Planar/Editor/Core/Archive/: Archive.cpp  CMakeLists.txt
Source/Planar/Editor/Core/Console/: CMakeLists.txt  CommandLineProcessor.cpp  Console.cpp  ProcessResult.cpp
Source/Planar/Editor/Core/Execute/: CMakeLists.txt  Execute.cpp
Source/Planar/Editor/Core/Input/: CMakeLists.txt  InputHandler.cpp
Source/Planar/Editor/Core/Progress/: CMakeLists.txt  Progress.cpp  ProgressHandler.cpp
Source/Planar/Editor/Entry/: CMakeLists.txt  Main.cpp
Source/Planar/Editor/Project/: CMakeLists.txt  Project.cpp  ProjectAsset.cpp
Source/Planar/Editor/Scene/: CMakeLists.txt  EditorScene.cpp  Scene.cpp  SelectProjectScene.cpp
Source/Planar/Editor/Script/: CMakeLists.txt  CSProject.cpp
Source/Planar/Editor/UI/: CMakeLists.txt  ConsoleWindow.cpp  ContentWindow.cpp  GameWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  SceneWindow.cpp  SettingsWindow.cpp
Source/Planar/Engine/: CMakeLists.txt
Source/Planar/Engine/Asset/: Asset.cpp  AssetDatabase.cpp  AssetFunction.cpp  CMakeLists.txt
Source/Planar/Engine/Audio/: Audio.cpp  AudioAsset.cpp  AudioHandle.cpp  AudioManager.cpp  CMakeLists.txt
Source/Planar/Engine/Component/: AudioSource.cpp  CMakeLists.txt  Camera2D.cpp  Camera2DAsset.cpp  CameraController2D.cpp  CharacterController2D.cpp  Component.cpp  ComponentBase.cpp  Script.cpp  SpriteRenderer.cpp  Transform2D.cpp  Transform2DAsset.cpp
Source/Planar/Engine/Core/: Application.cpp  ApplicationAsset.cpp  CMakeLists.txt  Component.cpp  GLFWContext.cpp  GameObject.cpp  ImGuiContext.cpp
Source/Planar/Engine/GameObject/: CMakeLists.txt  GameObject.cpp  GameObjectAsset.cpp
Source/Planar/Engine/Graphics/: CMakeLists.txt  SupportedGraphicsAPI.cpp
Source/Planar/Engine/Math/: CMakeLists.txt  MatrixTransform.cpp
Source/Planar/Engine/Scene/: CMakeLists.txt  Scene.cpp  SceneAsset.cpp  SceneNode.cpp
Source/Planar/Engine/Script/: CMakeLists.txt  ScriptDatabase.cpp
(+585 files in other folders)
