target_sources(${PLANAR_EDITOR_TARGET} PRIVATE
    AssetImportWindow.cpp
    BuildWindow.cpp
    ConsoleWindow.cpp
    ContentWindow.cpp
    EditorWindow.cpp
    EditorWindowManager.cpp
    GameWindow.cpp
    HierarchyWindow.cpp
    InspectorWindow.cpp
    SceneWindow.cpp
    SettingsWindow.cpp
)

add_subdirectory(Core)
